--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/OnlineBanking
+spring.datasource.url = jdbc:mysql://localhost:3306/onlinebanking
 
 # Username and secret
 spring.datasource.username = root
-spring.datasource.password = sesame
+spring.datasource.password = root
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -32,4 +32,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
